--- a/index.html
+++ b/index.html
@@ -2510,27 +2510,27 @@ which we mentioned at <a href='#chardevc'>6.5<!-- tex4ht:ref: sec:chardev_c  -->
 <a id='x1-39287r140'></a><span class='ecrm-0500'>140</span><span class='ectt-0800'>             </span><span id='textcolor1101'><span class='ectt-0800'>unsigned</span></span><span class='ectt-0800'> </span><span id='textcolor1102'><span class='ectt-0800'>long</span></span><span class='ectt-0800'> ioctl_param)</span> 
 <a id='x1-39289r141'></a><span class='ecrm-0500'>141</span><span class='ectt-0800'>{</span> 
 <a id='x1-39291r142'></a><span class='ecrm-0500'>142</span><span class='ectt-0800'>    </span><span id='textcolor1103'><span class='ectt-0800'>int</span></span><span class='ectt-0800'> i;</span> 
-<a id='x1-39293r143'></a><span class='ecrm-0500'>143</span><span class='ectt-0800'>    loff_t offset = 0;</span> 
-<a id='x1-39295r144'></a><span class='ecrm-0500'>144</span><span class='ectt-0800'>    </span><span id='textcolor1104'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> ch;</span> 
-<a id='x1-39297r145'></a><span class='ecrm-0500'>145</span> 
-<a id='x1-39299r146'></a><span class='ecrm-0500'>146</span><span class='ectt-0800'>    </span><span id='textcolor1105'><span class='ectt-0800'>/* Switch according to the ioctl called */</span></span> 
-<a id='x1-39301r147'></a><span class='ecrm-0500'>147</span><span class='ectt-0800'>    </span><span id='textcolor1106'><span class='ectt-0800'>switch</span></span><span class='ectt-0800'> (ioctl_num) {</span> 
-<a id='x1-39303r148'></a><span class='ecrm-0500'>148</span><span class='ectt-0800'>    </span><span id='textcolor1107'><span class='ectt-0800'>case</span></span><span class='ectt-0800'> IOCTL_SET_MSG: {</span> 
-<a id='x1-39305r149'></a><span class='ecrm-0500'>149</span><span class='ectt-0800'>        </span><span id='textcolor1108'><span class='ectt-0800'>/* Receive a pointer to a message (in user space) and set that to</span></span> 
-<a id='x1-39307r150'></a><span class='ecrm-0500'>150</span><span id='textcolor1109'><span class='ectt-0800'>         * be the device</span><span class='tctt-0800'>'</span><span class='ectt-0800'>s message.  Get the parameter given to ioctl by</span></span> 
-<a id='x1-39309r151'></a><span class='ecrm-0500'>151</span><span id='textcolor1110'><span class='ectt-0800'>         * the process.</span></span> 
-<a id='x1-39311r152'></a><span class='ecrm-0500'>152</span><span id='textcolor1111'><span class='ectt-0800'>         */</span></span> 
-<a id='x1-39313r153'></a><span class='ecrm-0500'>153</span><span class='ectt-0800'>        </span><span id='textcolor1112'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> __user *tmp = (</span><span id='textcolor1113'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> __user *)ioctl_param;</span> 
-<a id='x1-39315r154'></a><span class='ecrm-0500'>154</span> 
-<a id='x1-39317r155'></a><span class='ecrm-0500'>155</span><span class='ectt-0800'>        </span><span id='textcolor1114'><span class='ectt-0800'>/* Find the length of the message */</span></span> 
-<a id='x1-39319r156'></a><span class='ecrm-0500'>156</span><span class='ectt-0800'>        get_user(ch, tmp);</span> 
-<a id='x1-39321r157'></a><span class='ecrm-0500'>157</span><span class='ectt-0800'>        </span><span id='textcolor1115'><span class='ectt-0800'>for</span></span><span class='ectt-0800'> (i = 0; ch &amp;&amp; i &lt; BUF_LEN; i++, tmp++)</span> 
-<a id='x1-39323r158'></a><span class='ecrm-0500'>158</span><span class='ectt-0800'>            get_user(ch, tmp);</span> 
-<a id='x1-39325r159'></a><span class='ecrm-0500'>159</span> 
-<a id='x1-39327r160'></a><span class='ecrm-0500'>160</span><span class='ectt-0800'>        device_write(file, (</span><span id='textcolor1116'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> __user *)ioctl_param, i, NULL);</span> 
-<a id='x1-39329r161'></a><span class='ecrm-0500'>161</span><span class='ectt-0800'>        </span><span id='textcolor1117'><span class='ectt-0800'>break</span></span><span class='ectt-0800'>;</span> 
-<a id='x1-39331r162'></a><span class='ecrm-0500'>162</span><span class='ectt-0800'>    }</span> 
-<a id='x1-39333r163'></a><span class='ecrm-0500'>163</span><span class='ectt-0800'>    </span><span id='textcolor1118'><span class='ectt-0800'>case</span></span><span class='ectt-0800'> IOCTL_GET_MSG:</span> 
+<a id='x1-39293r143'></a><span class='ecrm-0500'>143</span> 
+<a id='x1-39295r144'></a><span class='ecrm-0500'>144</span><span class='ectt-0800'>    </span><span id='textcolor1104'><span class='ectt-0800'>/* Switch according to the ioctl called */</span></span> 
+<a id='x1-39297r145'></a><span class='ecrm-0500'>145</span><span class='ectt-0800'>    </span><span id='textcolor1105'><span class='ectt-0800'>switch</span></span><span class='ectt-0800'> (ioctl_num) {</span> 
+<a id='x1-39299r146'></a><span class='ecrm-0500'>146</span><span class='ectt-0800'>    </span><span id='textcolor1106'><span class='ectt-0800'>case</span></span><span class='ectt-0800'> IOCTL_SET_MSG: {</span> 
+<a id='x1-39301r147'></a><span class='ecrm-0500'>147</span><span class='ectt-0800'>        </span><span id='textcolor1107'><span class='ectt-0800'>/* Receive a pointer to a message (in user space) and set that to</span></span> 
+<a id='x1-39303r148'></a><span class='ecrm-0500'>148</span><span id='textcolor1108'><span class='ectt-0800'>         * be the device</span><span class='tctt-0800'>'</span><span class='ectt-0800'>s message.  Get the parameter given to ioctl by</span></span> 
+<a id='x1-39305r149'></a><span class='ecrm-0500'>149</span><span id='textcolor1109'><span class='ectt-0800'>         * the process.</span></span> 
+<a id='x1-39307r150'></a><span class='ecrm-0500'>150</span><span id='textcolor1110'><span class='ectt-0800'>         */</span></span> 
+<a id='x1-39309r151'></a><span class='ecrm-0500'>151</span><span class='ectt-0800'>        </span><span id='textcolor1111'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> __user *tmp = (</span><span id='textcolor1112'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> __user *)ioctl_param;</span> 
+<a id='x1-39311r152'></a><span class='ecrm-0500'>152</span><span class='ectt-0800'>        </span><span id='textcolor1113'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> ch;</span> 
+<a id='x1-39313r153'></a><span class='ecrm-0500'>153</span> 
+<a id='x1-39315r154'></a><span class='ecrm-0500'>154</span><span class='ectt-0800'>        </span><span id='textcolor1114'><span class='ectt-0800'>/* Find the length of the message */</span></span> 
+<a id='x1-39317r155'></a><span class='ecrm-0500'>155</span><span class='ectt-0800'>        get_user(ch, tmp);</span> 
+<a id='x1-39319r156'></a><span class='ecrm-0500'>156</span><span class='ectt-0800'>        </span><span id='textcolor1115'><span class='ectt-0800'>for</span></span><span class='ectt-0800'> (i = 0; ch &amp;&amp; i &lt; BUF_LEN; i++, tmp++)</span> 
+<a id='x1-39321r157'></a><span class='ecrm-0500'>157</span><span class='ectt-0800'>            get_user(ch, tmp);</span> 
+<a id='x1-39323r158'></a><span class='ecrm-0500'>158</span> 
+<a id='x1-39325r159'></a><span class='ecrm-0500'>159</span><span class='ectt-0800'>        device_write(file, (</span><span id='textcolor1116'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> __user *)ioctl_param, i, NULL);</span> 
+<a id='x1-39327r160'></a><span class='ecrm-0500'>160</span><span class='ectt-0800'>        </span><span id='textcolor1117'><span class='ectt-0800'>break</span></span><span class='ectt-0800'>;</span> 
+<a id='x1-39329r161'></a><span class='ecrm-0500'>161</span><span class='ectt-0800'>    }</span> 
+<a id='x1-39331r162'></a><span class='ecrm-0500'>162</span><span class='ectt-0800'>    </span><span id='textcolor1118'><span class='ectt-0800'>case</span></span><span class='ectt-0800'> IOCTL_GET_MSG: {</span> 
+<a id='x1-39333r163'></a><span class='ecrm-0500'>163</span><span class='ectt-0800'>        loff_t offset = 0;</span> 
 <a id='x1-39335r164'></a><span class='ecrm-0500'>164</span><span class='ectt-0800'>        </span><span id='textcolor1119'><span class='ectt-0800'>/* Give the current message to the calling process - the parameter</span></span> 
 <a id='x1-39337r165'></a><span class='ecrm-0500'>165</span><span id='textcolor1120'><span class='ectt-0800'>         * we got is a pointer, fill it.</span></span> 
 <a id='x1-39339r166'></a><span class='ecrm-0500'>166</span><span id='textcolor1121'><span class='ectt-0800'>         */</span></span> 
@@ -2541,7 +2541,7 @@ which we mentioned at <a href='#chardevc'>6.5<!-- tex4ht:ref: sec:chardev_c  -->
 <a id='x1-39349r171'></a><span class='ecrm-0500'>171</span><span id='textcolor1125'><span class='ectt-0800'>         */</span></span> 
 <a id='x1-39351r172'></a><span class='ecrm-0500'>172</span><span class='ectt-0800'>        put_user(</span><span id='textcolor1126'><span class='tctt-0800'>'</span><span class='ectt-0800'>\0</span><span class='tctt-0800'>'</span></span><span class='ectt-0800'>, (</span><span id='textcolor1127'><span class='ectt-0800'>char</span></span><span class='ectt-0800'> __user *)ioctl_param + i);</span> 
 <a id='x1-39353r173'></a><span class='ecrm-0500'>173</span><span class='ectt-0800'>        </span><span id='textcolor1128'><span class='ectt-0800'>break</span></span><span class='ectt-0800'>;</span> 
-<a id='x1-39355r174'></a><span class='ecrm-0500'>174</span> 
+<a id='x1-39355r174'></a><span class='ecrm-0500'>174</span><span class='ectt-0800'>    }</span> 
 <a id='x1-39357r175'></a><span class='ecrm-0500'>175</span><span class='ectt-0800'>    </span><span id='textcolor1129'><span class='ectt-0800'>case</span></span><span class='ectt-0800'> IOCTL_GET_NTH_BYTE:</span> 
 <a id='x1-39359r176'></a><span class='ecrm-0500'>176</span><span class='ectt-0800'>        </span><span id='textcolor1130'><span class='ectt-0800'>/* This ioctl is both input (ioctl_param) and output (the return</span></span> 
 <a id='x1-39361r177'></a><span class='ecrm-0500'>177</span><span id='textcolor1131'><span class='ectt-0800'>         * value of this function).</span></span> 
