--- a/lkmpg-for-ht.html
+++ b/lkmpg-for-ht.html
@@ -1275,7 +1275,7 @@ the structure which you do not explicitly assign will be initialized to
 </code>, … system calls is commonly named <code>  <span class='ectt-1000'>fops</span>
 </code>.
 </p><!-- l. 838 --><p class='indent'>   Since Linux v3.14, the read, write and seek operations are guaranteed for
-thread-safe by letting the file position update being mutual exclusion. So we can
+thread-safe by letting the file position update being mutual exclusion. So, we can
 safely implement those operations without unnecessary locking.
 </p><!-- l. 841 --><p class='indent'>   Since Linux v5.6, the <code>  <span class='ectt-1000'>proc_ops</span>
 </code> structure was introduced to replace the use of the
@@ -1419,9 +1419,9 @@ to the same memory may lead to the race condition, and will not preserve the
 performance. In the kernel module, this problem may happen due to multiple
 instances accessing the shared resources. Therefore, a solution is to enforce the
 exclusive access. We use atomic Compare-And-Swap (CAS) to determine whether the
-file is currently open by someone. CAS compares the contents of a memory location
-with the expected value and, only if they are the same, modifies the contents of that
-memory location to the desired value. See more concurrency details in the <a href='#avoiding-collisions-and-deadlocks'>12<!-- tex4ht:ref: sec:synchronization  --></a>
+file is currently opened by someone. CAS compares the contents of a memory
+location with the expected value and, only if they are the same, modifies the contents
+of that memory location to the desired value. See more concurrency details in the <a href='#avoiding-collisions-and-deadlocks'>12<!-- tex4ht:ref: sec:synchronization  --></a>
 section.
                                                                   
 
